# simulatorMapping

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  demoSettings.json  generalSettings.json  install.sh  installWithVcpkg.bat  offline_orb_slam.cc  opencv3.4.16Install.sh  run_model.cc  run_model_on_orb_slam.cc  simulator.cpp  vcpkg.json
TLV-data/: drones_lab.fbx  drones_lab.mtl
config/: EuRoC.yaml  KITTI00-02.yaml  KITTI04-12.yaml  tello.yaml  tello_9F5EC2.yaml  tello_9F5EC2_640.yaml
examples/: CMakeLists.txt  demo.cc  mapping.cc  navigate_to_point.cc  offline_orb_slam.cc  runSimulator.cpp  save_keypoints_mapping.cc  save_map.cc  simulatorUsageTemplate.cpp  testExitRoom.cpp
exe/: CMakeLists.txt  LiveMapPoints.cc  build_new_map_demo.cc  cameraCalibretion.cpp  check_matches.cc  check_matches_one_by_one.cc  check_matches_opencv.cc  combine_frames.py  csv_to_xyz.cc  demo.cc  draw_all_points.cpp  example.cc  get_point_data.cc  get_points_from_camera.cc  get_points_from_camera_second.cc  get_points_from_camera_third.cc  get_points_from_frame_orb_slam.cc  get_pos_from_frame_orb_slam.cc  icp_model_orb_slam.py  icp_model_orbs_slam.cc  make_a_round.cc  mapping.cc  mono_tum.cpp  move_s.cc  my_video_orb_slam  navigate_to_point.cc  offline_orb_slam.cc  pcd_to_xyz.cc  plot.py  plot_orbs.py  points_seen_by_camera.cc  points_seen_by_camera_by_frame.cc  points_seen_by_camera_by_frame_third.cc  points_seen_by_frame_data.cc  points_seen_by_frames.cc  points_seen_by_pos.cc  remove_map_points.cc  remove_outliers.cc  runOnVideo.cpp  runPolySimulator.cpp  (+26 more)
exe/unused/: get_points_from_camera.cc  get_points_from_camera_orb_slam.cc  get_points_from_camera_second.cc  get_points_from_camera_third.cc  points_seen_by_camera_by_frame.cc  points_seen_by_camera_by_frame_second.cc  test_is_point_visible.cc
include/: Auxiliary.h
include/MapControl/: MapControl.h
include/RoomExit/: RoomExit.h
include/RunModel/: TextureShader.h
include/simulator/: simulator.h
slam/include/: BoostArchiver.h  CSVReader.h  Converter.h  Frame.h  FrameDrawer.h  KeyFrame.h  KeyFrameDatabase.h  LoopClosing.h  MapDrawer.h  ORBextractor.h  Optimizer.h  RaspberryKeyFrame.h  Serialization.h  System.h  Tracking.h  Viewer.h
slam/src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  RaspberryKeyFrame.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
src/: Auxiliary.cpp
src/MapControl/: MapControl.cpp  OfflineMapPoint.cpp
src/RoomExit/: RoomExit.cpp
src/simulator/: simulator.cpp
tools/: bin_vocabulary  bin_vocabulary.cc  simulator.cpp  simulator.h  simulatorREADME.md
tools/VocCreation/: createTrees.cpp
tools/VocCreation/filesPrepartion/: complete_weights.py  create_trees_wrapper.py  extract_leaves_and_weights.py
tools/navigation/: RoomExit.cpp  RoomExit.h
tools/navigation/ExitRoomFiles/: exit_room_algo.cpp
tools/navigation/include/: RoomExit.h
tools/navigation/include/save_tmp_include/: AutonomousDrone.h  DBSCAN.h  Line.h  Pizza.h  Point.h  Polygon.h
tools/navigation/src/: RoomExit.cpp
tools/navigation/src/save_tmp_src/: AutonomousDrone.cpp  DBSCAN.cpp  Line.cpp  Pizza.cpp  Point.cpp  Polygon.cpp
tools/simulator/: PolySimulator readME.md  __init__.py  polySimulator.cpp  polySimulator.h  simulator.cpp  simulator.h  simulatorMainClass.cpp  simulatorMainClass.h  simulatorManager.h  simulator_python.cpp
utils/include/: Auxiliary.h  Line.h  MapControl.h  OfflineMapPoint.h  Point.h  simulator.h
utils/include/run_model/: TextureShader.h
utils/src/: Auxiliary.cpp  Line.cpp  MapControl.cpp  OfflineMapPoint.cpp  Point.cpp  simulator.cpp
vcpkg/: installWithVcpkg.bat
